# Lab2OOOP2020

./: CMakeLists.txt  Lab2_en_150.ts  add_a_new_alarm_dialog.cpp  add_a_new_alarm_dialog.h  add_a_new_alarm_dialog.ui  add_a_new_timer_dialog.cpp  add_a_new_timer_dialog.h  add_a_new_timer_dialog.ui  alarm_end_window.cpp  alarm_end_window.h  alarm_end_window.ui  alarmclock.cpp  alarmclock.h  alarmclock.ui  alarms.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  settings.cpp  settings.h  settings.ui  syshidden.cpp  syshidden.h  timer_end_window.cpp  timer_end_window.h  timer_end_window.ui  timers.txt
